--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
   
   height: 100vh;
   background-color: #070c2a;
-  background-image: url(../images/SUPERNOVA\ ROBOTICS.gif);
+  background-image: url(../images/SUPERNOVAROBOTICS.gif);
   background-size: 100%;
   height: max-content;
   min-height: 600px;
